# stromx-studio

./: .gitignore  CMakeLists.txt  Doxyfile.in  README.markdown  stromx-gui.kdev4  stromx-studio.kdev4
cmake/modules/: Findstromx.cmake  UseDoxygen.cmake
debian/: changelog  control  rules  stromx-studio.install
desktop/: CMakeLists.txt  stromx-studio.desktop
doc/: stromx-gui.vpp  stromx-studio.vpp
example/: 16_bitTestData.stromx  CMakeLists.txt  camera.stromx  client_server.stromx  deadlock.stromx  exception.stromx  gui_freeze.stromx  hist.stromx  hough.stromx  input_bug.stromx  lines.stromx  parallel.stromx  send_receive.stromx  uninitialized.stromx  webcamera.stromx
example/camera/: stream.studio  stream.studio.geometry
example/exception/: stream.studio  stream.studio.geometry  stream.xml
example/hough/: stream.studio  stream.studio.geometry  stream.xml
example/lines/: stream.studio  stream.studio.geometry  stream.xml
example/parallel/: stream.studio  stream.studio.geometry  stream.xml
example/webcamera/: stream.studio  stream.studio.geometry  stream.xml
rpm/: stromx-studio.changes  stromx-studio.spec
src/: AbstractDataVisualizer.h  AddConnectionCmd.h  AddOperatorCmd.cpp  AddOperatorCmd.h  AddThreadCmd.h  ArrowItem.cpp  ArrowItem.h  CMakeLists.txt  ChooseImageButton.cpp  Common.cpp  Common.h  Config.h.in  ConnectionItem.cpp  ConnectionItem.h  ConnectionModel.cpp  ConnectionModel.h  ConnectorDataEvent.cpp  ConnectorDataEvent.h  ConnectorItem.cpp  ConnectorItem.h  ConnectorObserver.cpp  ConnectorObserver.h  ConnectorOccupyEvent.cpp  ConnectorOccupyEvent.h  DataConverter.cpp  DataConverter.h  DataManager.cpp  DataManager.h  DataVisualizer.cpp  DataVisualizer.h  DataVisualizerUtilities.cpp  DataVisualizerUtilities.h  DeinitializeOperatorCmd.cpp  DeinitializeOperatorCmd.h  DocumentationWindow.cpp  ErrorData.cpp  ErrorData.h  ErrorEvent.h  ErrorListModel.cpp  ErrorListModel.h  (+132 more)
src/cmd/: AddConnectionCmd.cpp  AddOperatorCmd.cpp  AddThreadCmd.cpp  AddThreadCmd.h  DeinitializeOperatorCmd.cpp  DeinitializeOperatorCmd.h  InitializeOperatorCmd.cpp  InsertInputCmd.cpp  InsertInputCmd.h  InsertObserverCmd.cpp  MoveInputCmd.cpp  MoveOperatorCmd.cpp  RemoveConnectionCmd.cpp  RemoveConnectionCmd.h  RemoveInputCmd.cpp  RemoveObserverCmd.cpp  RemoveObserverCmd.h  RemoveOperatorCmd.cpp  RemoveOperatorCmd.h  RemoveThreadCmd.cpp  RemoveThreadCmd.h  RenameObserverCmd.cpp  RenameObserverCmd.h  RenameOperatorCmd.cpp  RenameOperatorCmd.h  RenameThreadCmd.cpp  SetInputActiveCmd.cpp  SetInputColorCmd.cpp  SetInputVisualizationCmd.cpp  SetInputVisualizationCmd.h  SetParameterCmd.cpp  SetParameterCmd.h  SetStreamSettings.cpp  SetStreamSettingsCmd.h  SetThreadCmd.cpp  SetThreadCmd.h  SetThreadColorCmd.cpp  SetVisualizationPropertiesCmd.cpp  SetVisualizationPropertiesCmd.h  SetVisualizationStateCmd.cpp  (+1 more)
src/data/: ErrorData.cpp  ErrorData.h  InputData.cpp  InputData.h  OperatorData.cpp  OperatorData.h
src/delegate/: ChooseImageButton.cpp  ChooseImageButton.h  EditMatrixButton.cpp  EditMatrixButton.h  InputDelegate.cpp  InputDelegate.h  InputEditWidget.cpp  InputEditWidget.h  InputPaintWidget.cpp  InputPaintWidget.h  InputWidget.h  ItemDelegate.cpp  TriggerButton.cpp  TriggerButton.h
src/event/: ConnectorDataEvent.cpp  ConnectorDataEvent.h  ConnectorOccupyEvent.cpp  ErrorEvent.h
src/images/: icons.txt
src/item/: ArrowItem.cpp  ArrowItem.h  ConnectionItem.cpp  ConnectionItem.h  ConnectorItem.cpp  OperatorItem.cpp  OperatorItem.h
src/model/: ConnectionModel.cpp  ConnectionModel.h  ErrorListModel.cpp  ErrorListModel.h  InputModel.cpp  InputModel.h  ObserverModel.cpp  ObserverModel.h  ObserverTreeModel.cpp  ObserverTreeModel.h  OperatorLibraryModel.cpp  OperatorLibraryModel.h  OperatorModel.cpp  OperatorModel.h  PropertyModel.cpp  PropertyModel.h  SelectionModel.cpp  SelectionModel.h  StreamModel.cpp  StreamModel.h  ThreadListModel.cpp  ThreadModel.cpp  ThreadModel.h
src/task/: GetParameterTask.cpp  SetParameterTask.cpp  Task.cpp  Task.h
src/test/: CMakeLists.txt  Config.h.in  DataConverterTest.cpp  DataConverterTest.h  DeadlockOperator.cpp  DeadlockOperator.h  ExceptionOperator.cpp  ExceptionOperator.h  ImageTest.cpp  ImageTest.h  ObserverSchedulerTest.cpp  ObserverSchedulerTest.h  OperatorLibraryModelTest.cpp  OperatorLibraryModelTest.h  ParameterOperator.cpp  ParameterOperator.h  ParameterServerTest.cpp  ParameterServerTest.h  RandomDataOperator.cpp  RandomDataOperator.h  StreamModelTest.cpp  StreamModelTest.h  Test.cpp  TestDataOperator.cpp  TestDataOperator.h  TestOperator.cpp  TestOperator.h  camera.stromx  connector.xml  extra_parameter.stromx  main.cpp
src/test/camera/: stream.studio  stream.studio.geometry  stream.xml  stream_uninitialized.xml
src/test/extra_parameter/: stream.studio  stream.studio.geometry  stream.xml
src/visualization/: ColorChooser.cpp  ColorChooser.h  DefaultVisualization.cpp  DefaultVisualization.h  Histogram.cpp  Histogram.h  Image.cpp  Image.h  ImageVisualization.cpp  ImageVisualization.h  LineSegments.cpp  LineSegments.h  Points.cpp  Points.h  Visualization.h  VisualizationRegistry.cpp  VisualizationRegistry.h  VisualizationState.cpp  VisualizationState.h  VisualizationWidget.cpp  VisualizationWidget.h
src/widget/: DataVisualizer.cpp  DataVisualizer.h  DataVisualizerUtilities.cpp  DataVisualizerUtilities.h  DocumentationWindow.cpp  DocumentationWindow.h  ErrorListView.cpp  ErrorListView.h  FindPackagesDialog.cpp  FindPackagesDialog.h  GraphicsView.cpp  InputEditWidget.cpp  InputEditWidget.h  InputPaintWidget.cpp  InputPaintWidget.h  InputWidget.cpp  InputWidget.h  MainWindow.cpp  MainWindow.h  MatrixEditor.cpp  MatrixEditor.h  ObserverTreeView.cpp  ObserverTreeView.h  ObserverView.cpp  ObserverView.h  ObserverWindow.cpp  ObserverWindow.h  OperatorLibraryView.cpp  OperatorLibraryView.h  PropertyView.cpp  PropertyView.h  SettingsDialog.cpp  SettingsDialog.h  StreamEditor.cpp  ThreadListView.cpp  ThreadListView.h
wix/: stromx-studio.wxs  stromx.wxs
